# UI-Acces-a-dades

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema_creation.py  0002_added_last_update_attribute.py  0003_added_sponsors_relationship.py
docs/: video_guio.md
notebooks/: 200_repositoris.ipynb
src/domain/: __init__.py  abstract_repository.py  abstract_sqlalchemy_repository.py  config.py  db.py  models.py  repositories.py
src/treballdani_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ui/: main.py
